--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.7",
     "mysql": "^2.18.1",
+    "nodemon": "^2.0.13",
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7"
