--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "firebase": "^9.1.0",
     "firebase-admin": "^9.12.0",
     "fs": "0.0.1-security",
+    "googleapis": "^88.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.7",
     "mysql": "^2.18.1",
