--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "fs": "0.0.1-security",
     "googleapis": "^88.2.0",
     "jsonwebtoken": "^8.5.1",
+    "mariadb": "^2.5.4",
     "mongoose": "^6.0.7",
     "multer": "^1.4.3",
     "multer-storage-cloudinary": "^4.0.0",
     "mysql": "^2.18.1",
+    "mysql2": "^2.3.0",
     "nodemon": "^2.0.13",
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
