--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "googleapis": "^88.2.0",
     "jsonwebtoken": "^8.5.1",
     "mariadb": "^2.5.4",
+    "method-override": "^3.0.0",
     "mongoose": "^6.0.7",
     "multer": "^1.4.3",
     "multer-storage-cloudinary": "^4.0.0",
