--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cloudinary": "^1.27.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.5",
+    "countup.js": "^2.0.8",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "ejs-mate": "^3.0.0",
