--- a/package.json
+++ b/package.json
@@ -1,48 +1,47 @@
 {
-  "name": "app",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Aravindhabii/ClassicNeet.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Aravindhabii/ClassicNeet/issues"
-  },
-  "homepage": "https://github.com/Aravindhabii/ClassicNeet#readme",
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cloudinary": "^1.27.0",
-    "connect-flash": "^0.1.1",
-    "cookie-parser": "^1.4.5",
-    "countup.js": "^2.0.8",
-    "dotenv": "^10.0.0",
-    "ejs": "^3.1.6",
-    "ejs-mate": "^3.0.0",
-    "express": "^4.17.1",
-    "express-session": "^1.17.2",
-    "firebase": "^9.1.0",
-    "firebase-admin": "^9.12.0",
-    "fs": "0.0.1-security",
-    "googleapis": "^88.2.0",
-    "jsonwebtoken": "^8.5.1",
-    "mariadb": "^2.5.4",
-    "method-override": "^3.0.0",
-    "mongoose": "^6.0.7",
-    "multer": "^1.4.3",
-    "multer-storage-cloudinary": "^4.0.0",
-    "mysql": "^2.18.1",
-    "mysql2": "^2.3.0",
-    "nodemon": "^2.0.13",
-    "passport": "^0.5.0",
-    "passport-local": "^1.0.0",
-    "path": "^0.12.7"
-  }
+	"name": "app",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"start": "node app.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/Aravindhabii/ClassicNeet.git"
+	},
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/Aravindhabii/ClassicNeet/issues"
+	},
+	"homepage": "https://github.com/Aravindhabii/ClassicNeet#readme",
+	"dependencies": {
+		"bcryptjs": "^2.4.3",
+		"cloudinary": "^1.27.0",
+		"connect-flash": "^0.1.1",
+		"cookie-parser": "^1.4.5",
+		"countup.js": "^2.0.8",
+		"dotenv": "^10.0.0",
+		"ejs": "^3.1.6",
+		"ejs-mate": "^3.0.0",
+		"express": "^4.17.1",
+		"express-session": "^1.17.2",
+		"firebase": "^9.1.0",
+		"firebase-admin": "^9.12.0",
+		"fs": "0.0.1-security",
+		"googleapis": "^88.2.0",
+		"jsonwebtoken": "^8.5.1",
+		"mariadb": "^2.5.4",
+		"method-override": "^3.0.0",
+		"mongoose": "^6.0.7",
+		"multer": "^1.4.3",
+		"multer-storage-cloudinary": "^4.0.0",
+		"mysql": "^2.18.1",
+		"mysql2": "^2.3.0",
+		"nodemon": "^2.0.13",
+		"passport": "^0.5.0",
+		"passport-local": "^1.0.0",
+		"path": "^0.12.7"
+	}
 }
