--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	"homepage": "https://github.com/Aravindhabii/ClassicNeet#readme",
 	"dependencies": {
 		"bcryptjs": "^2.4.3",
+		"bootbox": "^5.5.2",
 		"cloudinary": "^1.27.0",
 		"connect-flash": "^0.1.1",
 		"cookie-parser": "^1.4.5",
