--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"firebase-admin": "^9.12.0",
 		"fs": "0.0.1-security",
 		"googleapis": "^88.2.0",
+		"image-size": "^1.0.0",
 		"jsonwebtoken": "^8.5.1",
 		"mariadb": "^2.5.4",
 		"method-override": "^3.0.0",
