--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
 	"main": "app.js",
 	"homepage": "web.classicneetacademy.com",
 	"scripts": {
-		"dev": "nodemon app.js",
-		"start": "node app.js"
+		"dev": "node app.js",
+		"start": "nodemon app.js"
 	},
 	"repository": {
 		"type": "git",
@@ -34,7 +34,7 @@
 		"multer": "^1.4.3",
 		"multer-storage-cloudinary": "^4.0.0",
 		"mysql": "^2.18.1",
-		"nodemon": "^2.0.13",
+		"nodemon": "^2.0.15",
 		"passport": "^0.5.0",
 		"passport-local": "^1.0.0"
 	}
