--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"multer": "^1.4.3",
 		"multer-storage-cloudinary": "^4.0.0",
 		"mysql": "^2.18.1",
+		"nodemailer": "^6.7.1",
 		"nodemon": "^2.0.15",
 		"passport": "^0.5.0",
 		"passport-local": "^1.0.0"
