--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
 		"jsonwebtoken": "^8.5.1",
 		"method-override": "^3.0.0",
 		"mongoose": "^6.0.7",
+		"morgan": "^1.10.0",
 		"multer": "^1.4.3",
 		"multer-storage-cloudinary": "^4.0.0",
 		"mysql": "^2.18.1",
 		"nodemailer": "^6.7.1",
 		"nodemon": "^2.0.15",
+		"paginationjs": "^2.1.5",
 		"passport": "^0.5.0",
 		"passport-local": "^1.0.0"
 	}
